III-1953 Extra padding and fix for string-based dates

--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -3,7 +3,7 @@
 </div>
 <div id="event-form-publish-modal" class="modal-body">
     <p>Vanaf wanneer mag dit online verschijnen?</p>
-    <div class="radio">
+    <div class="radio padding-left-12-5">
         <label>
         <input type="radio" ng-model="enableDate" ng-checked="isToday" value="false" name="publishDate" value="now">
         Meteen
