III-916 Change submit button state on name change.
In the dialog for organizer the submit button is disabled by default. Only when a valid website is entered it is enabled.
The state change is only tracked on website changes, this is now also done for name changes.

--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -45,7 +45,12 @@
         <div class="col-sm-12 col-md-8">
           <div class="form-group" ng-class="{'has-error' : showValidation && organizerForm.name.$error.required }">
             <label>Naam</label>
-            <input type="text" name="name" class="form-control" ng-model="newOrganizer.name" required>
+            <input type="text"
+                   name="name"
+                   class="form-control"
+                   ng-model="newOrganizer.name"
+                   ng-change="updateName()"
+                   required>
             <p class="help-block">De officiële publieke naam van de organisatie.</p>
             <span class="help-block" ng-show="showValidation && organizerForm.name.$error.required">
           Gelieve een naam in te vullen
