III-1915 Fix for z-index on inputgroup.

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -754,6 +754,13 @@ form.booking-period {
   table {
     border: 1px solid @udb-gray-light;
   }
+    .input-group {
+        z-index: -50;
+    }
+
+    .input-group-btn{
+        z-index: -50;
+    }
 }
 
 .npr {
