III-2025: Calendar mark-up fixed period timing

--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -25,6 +25,7 @@
 @import "event-detail.less";
 @import "editable-click";
 @import "cultuurkuur-panel.less";
+@import "form-calendar.less";
 
 //Management module
 @import "query-search-result.less";
