--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -62,62 +62,7 @@
             <div class="calendar-recurrence" ng-if="calendar.weeklyRecurring">
                 <udb-form-calendar-period form-data="calendar.formData"></udb-form-calendar-period>
                 <hr>
-                <div class="calendar-opening-hours">
-                    <div class="opening-hours-collection">
-                        <div class="opening-hours" ng-form="openingHoursInfo" ng-repeat="openingHours in calendar.openingHoursCollection.openingHours">
-                            <span aria-hidden="true"
-                                  class="close"
-                                  ng-show="calendar.openingHoursCollection.openingHours.length > 1"
-                                  ng-click="calendar.removeOpeningHours(openingHours)">×</span>
-                            <div class="weekdays">
-                                <label>Op</label>
-                                <br>
-                                <label class="checkbox-inline" ng-repeat="(day, weekday) in openingHours.dayOfWeek">
-                                    <input type="checkbox"
-                                           ng-change="calendar.validateOpeningHours()"
-                                           ng-model="openingHours.dayOfWeek[day].open">
-                                        <span ng-bind="::weekday.label"></span>
-                                </label>
-                            </div>
-                            <div class="opening-time form-group"
-                                 ng-class="{'has-error': openingHoursInfo.opens.$invalid && openingHoursInfo.opens.$touched}">
-                                <label class="control-label" for="opening-hours-{{$index}}-opens">Van</label>
-                                <input udb-time
-                                        id="opening-hours-{{$index}}-opens" 
-                                        type="time"
-                                        name="opens"
-                                        class="form-control starthour" 
-                                        ng-model="openingHours.opensAsDate"
-                                        ng-required="true"
-                                        ng-change="calendar.validateOpeningHours()"
-                                        placeholder="Bv. 09:00">
-                            </div>
-                            <div class="closing-time form-group"
-                                 ng-class="{'has-error': openingHoursInfo.closes.$invalid && openingHoursInfo.closes.$touched}">
-                                <label class="control-label" for="opening-hours-{{$index}}-closes">Tot</label>
-                                <input  udb-time
-                                        id="opening-hours-{{$index}}-closes" 
-                                        type="time" 
-                                        name="closes"
-                                        class="form-control endhour" 
-                                        ng-model="openingHours.closesAsDate"
-                                        ng-required="true"
-                                        ng-change="calendar.validateOpeningHours()"
-                                        placeholder="Bv. 17:00">
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="alert alert-danger" role="alert" ng-if="!!calendar.openingHoursErrors.length">
-                        <ul>
-                            <li ng-repeat="error in calendar.openingHoursErrors"
-                                ng-bind="'OPENING_HOURS_ERROR.' + error | translate"></li>
-                        </ul>
-                    </div>
-                    <p><a href="#" 
-                        ng-click="calendar.createNewOpeningHours()" 
-                        class="add-period-link">Uren toevoegen</a></p>
-                </div>
+                <udb-event-form-opening-hours opening-hours="calendar.openingHoursCollection"></udb-event-form-opening-hours>
             </div>
         </div>
     </div>
