--- a/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
+++ b/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
@@ -2,49 +2,32 @@
     <h4 class="modal-title">Openingsuren</h4>
 </div>
 <div class="modal-body">
-    <div class="alert alert-danger" ng-show="ohemc.errors.openAndClose">
-        <p class="text-danger">Vul alle openings- en sluitingstijden in.</p>
+    <div class="alert alert-danger" role="alert" ng-if="!!ohemc.errors.length">
+        <ul>
+            <li ng-repeat="error in ohemc.errors"
+                ng-bind="'OPENING_HOURS_ERROR.' + error | translate"></li>
+        </ul>
     </div>
-    <div class="alert alert-danger" ng-show="ohemc.errors.dayOfWeek">
-        <p class="text-danger">Je moet minstens 1 weekdag selecteren.</p>
-    </div>
-    <div class="alert alert-danger" ng-show="ohemc.errors.openIsBeforeClose">
-        <p class="text-danger">Gelieve een sluitingstijd in te geven die later is dan de openingstijd.</p>
-    </div>
-    <div class="row">
-        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+    <div class="opening-hours-header">
+        <div class="weekdays">
             Dagen
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <div class="opening-time">
             Van
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <div class="closing-time">
             Tot
         </div>
     </div>
-    <div class="row" ng-repeat="openingHours in ohemc.openingHoursCollection.openingHours">
+    <div class="opening-hours" ng-repeat="openingHours in ohemc.openingHoursCollection.openingHours">
         <ng-form name="openingHoursInfo">
-            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5"
-                 ng-class="{'has-error': openingHoursInfo.dayOfWeek.$invalid && openingHoursInfo.dayOfWeek.$touched}">
-                <div class="form-group">
-                    <select class="selectpicker"
-                            name="dayOfWeek"
-                            multiple
-                            start-label="Kies dag(en)"
-                            ng-model="openingHours.dayOfWeek"
-                            udb-multiselect
-                            ng-required="true">
-                        <option value="monday">maandag</option>
-                        <option value="tuesday">dinsdag</option>
-                        <option value="wednesday">woensdag</option>
-                        <option value="thursday">donderdag</option>
-                        <option value="friday">vrijdag</option>
-                        <option value="saturday">zaterdag</option>
-                        <option value="sunday">zondag</option>
-                    </select>
-                </div>
+            <div class="weekdays">
+                <label class="checkbox-inline" ng-repeat="(day, weekday) in openingHours.dayOfWeek">
+                    <input type="checkbox" ng-model="openingHours.dayOfWeek[day].open">
+                        <span ng-bind="::weekday.label"></span>
+                </label>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <div class="opening-time">
                 <div class="form-group"
                      ng-class="{'has-error': openingHoursInfo.opens.$invalid && openingHoursInfo.opens.$touched}">
                     <input udb-time
@@ -56,7 +39,7 @@
                            ng-model="openingHours.opensAsDate"/>
                 </div>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <div class="closing-time">
                 <div class="form-group"
                      ng-class="{'has-error': openingHoursInfo.closes.$invalid && openingHoursInfo.closes.$touched}">
                     <input udb-time
@@ -68,7 +51,7 @@
                            ng-model="openingHours.closesAsDate"/>
                 </div>
             </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <div class="remove">
                 <button class="btn btn-link" ng-click="ohemc.removeOpeningHours(openingHours)">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </button>
