--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -1,11 +1,10 @@
-<div class="col-xs-12" ng-hide="!!cm.openingHoursCollection.openingHours.length">
-  <a href="#" class="btn btn-link btn-plus wanneer-openingsuren-link"
-     ng-click="cm.edit()">Openingsuren toevoegen</a>
-</div>
-
-<div class="col-xs-12 col-sm-8" ng-if="!!cm.openingHoursCollection.openingHours.length">
-  <section class="wanneer-openingsuren-resultaat">
-    <table class="table table-condensed ">
+<div class="opening-hours-week-schedule">
+  <div class="empty" ng-hide="!!cm.openingHoursCollection.openingHours.length">
+    <a href="#" class="btn btn-link btn-plus wanneer-openingsuren-link"
+      ng-click="cm.edit()">Openingsuren toevoegen</a>
+  </div>
+  <div class="time-table">
+    <table class="table table-condensed" ng-if="!!cm.openingHoursCollection.openingHours.length">
       <thead>
       <th>Openingsuren</th>
       <th>
@@ -20,8 +19,8 @@
           <td>
             <span ng-bind="openingHour.opens"></span> – <span ng-bind="openingHour.closes"></span>
           </td>
-         </tr>
+          </tr>
       </tbody>
     </table>
-  </section>
+  </div>
 </div>
