--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -87,21 +87,26 @@
   }
 }
 
-.opening-hours {
+.opening-hours,
+.opening-hours-header {
   .make-row();
   position: relative;
   padding-right: 30px;
 
   .weekdays {
-    .make-sm-column(6);
+    .make-sm-column(5);
   }
 
   .opening-time {
-    .make-sm-column(2);
+    .make-sm-column(3);
   }
 
   .closing-time {
-    .make-sm-column(2);
+    .make-sm-column(3);
+  }
+
+  .remove {
+    .make-sm-column(1);
   }
 }
 
@@ -117,3 +122,17 @@
   border-top: 1px solid #eee;
   padding-top: 10px;
 }
+
+.opening-hours-week-schedule {
+  .make-row();
+  
+  .time-table {
+    .make-xs-column(12);
+    .make-sm-column(8);
+  }
+
+  .empty {
+    .make-sm-column(12);
+  }
+}
+
