--- a/src/event_form/components/calendar/form-calendar-period.component.html
+++ b/src/event_form/components/calendar/form-calendar-period.component.html
@@ -2,10 +2,10 @@
     <label>
         <input type="checkbox"
                class="permanent-check"
-               ng-model="$ctrl.formData.calendarType"
+               ng-model="$ctrl.calendarType"
                ng-true-value="'periodic'"
                ng-false-value="'permanent'"
-               ng-change="$ctrl.formData.setCalendarType($ctrl.formData.calendarType)">
+               ng-change="$ctrl.formData.setCalendarType($ctrl.calendarType)">
         <span>Start- en einddatum</span>
     </label>
     <div class="not-permanent">
