--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -87,8 +87,8 @@
   }
 }
 
-.opening-hours,
-.opening-hours-header {
+.opening-hours .opening-hours-labels,
+.opening-hours .opening-hours-set {
   .make-row();
   position: relative;
   padding-right: 30px;
@@ -108,6 +108,10 @@
   .remove {
     .make-sm-column(1);
   }
+
+  .add {
+    .make-sm-column(12);
+  }
 }
 
 .close {
@@ -117,8 +121,7 @@
 }
 
 .calendar-time-span:not(:first-child),
-.opening-hours:not(:first-child){
-  margin-top: 10px;
+.opening-hours-set:not(:first-child){
   border-top: 1px solid #eee;
   padding-top: 10px;
 }
@@ -126,13 +129,9 @@
 .opening-hours-week-schedule {
   .make-row();
   
-  .time-table {
+  .time-table,
+  .empty {
     .make-xs-column(12);
     .make-sm-column(8);
   }
-
-  .empty {
-    .make-sm-column(12);
-  }
 }
-
